# deciduously-com-sunfish

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build-container.sh  build-release.sh  build.rs  deploy_update.sh  deployment-notes.md  flake.nix  fly.toml  main.rs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  readme.md  rust-toolchain.toml  serve.rs  symlink
.cargo/: config.toml
.github/workflows/: dockerimage.yml  rust.yml
bk/: canvas-rust-wasm.md  cargo-build-scripts.md  debian-buster.md  deciduously-com.md  how-i-emacs.md  pressure-free-aoc.md  procedural-melody-generation.md  rust-arena-trees.md  rust-your-own-lisp.md  stencil-home.md
blog/: actix-trials.md  actix-wrap.md  avoiding-problems.md  back-to-school.md  ben-folds-five.md  ben-plus-plus.md  board-game-mechanics.md  builder-pattern.md  callbacks-trait-objects-associated-types.md  canvas-cljs-vue.md  canvas-ts-vue.md  cljs-exercise.md  clojure-dorothy.md  clojure-web.md  cpp-template-specialization.md  crates-known-loved.md  creative-coding-nannou.md  debian-buster.md  deciduously-com-unpublished.md  deciduously-com.md  deciduously.md  dev-to-scrape-rust.md  dumb-things-i-did.md  fold-em.md  formdata-ts.md  fresh-ruby-project.md  fsharp-pretty-cool.md  get-started-writing-scheme.md  getting-cozy-cpp.md  getting-cozy-ruby.md  green-squares.md  haskell-english.md  haskell-training-wheels.md  hof-rust.md  how-i-emacs-packages.md  hyper-api.md  hyper-template.md  learning-german.md  luhn-functional-javascript.md  make-a-makefile.md  (+25 more)
content/: Cargo.toml  lib.rs
content/blog/a_tale_of_two_functions/: post.md
content/blog/actix_trials/: post.md
content/blog/actix_wrap/: post.md
content/blog/avoiding_problems/: post.md
content/blog/back_to_school/: post.md
content/blog/ben_folds_five/: post.md
content/blog/ben_plus_plus/: post.md
content/blog/bitwise_operators/: post.md
content/blog/board_game_mechanics/: post.md
content/blog/builder_pattern/: post.md
content/blog/callbacks_trait_objects_associated_types/: post.md
content/blog/canvas_cljs_vue/: post.md
content/blog/canvas_rust_wasm/: post.md
content/blog/canvas_ts_vue/: post.md
content/blog/cargo_build_scripts/: post.md
content/blog/cljs_exercise/: post.md
content/blog/clojure_dorothy/: post.md
content/blog/clojure_web/: post.md
content/blog/cool_blog_post/: post.md
content/blog/cpp_template_specialization/: post.md
content/blog/cracking_oci_image/: post.md
content/blog/crates_known_and_loved/: post.md
content/blog/creative_coding_nannou/: post.md
content/blog/debian_buster/: post.md
content/blog/deciduously/: post.md
content/blog/dev_to_scrape_rust/: post.md
content/blog/dumb_things_i_did/: post.md
content/blog/fold_em/: post.md
content/blog/formdata_ts/: post.md
content/blog/fresh_ruby_project/: post.md
content/blog/fsharp_is_pretty_cool/: post.md
content/blog/get_started_writing_scheme/: post.md
content/blog/getting_cozy_cpp/: post.md
content/blog/getting_cozy_ruby/: post.md
content/blog/grab_stuff_from_git_history/: post.md
content/blog/green_squares/: post.md
content/blog/haskell_english/: post.md
content/blog/haskell_training_wheels/: post.md
content/blog/hof_rust/: post.md
content/blog/how_i_emacs/: post.md
content/blog/how_i_emacs_packages/: post.md
content/blog/hyper_api/: post.md
content/blog/hyper_api_again/: post.md
content/blog/hyper_template/: post.md
content/blog/java_makefile/: post.md
content/blog/learning_german/: post.md
content/blog/luhn_funtional_javascript/: post.md
content/blog/make_a_makefile/: post.md
content/blog/multi_stage_docker/: post.md
content/blog/nix_flakes_cpp/: post.md
content/blog/nix_flakes_jupyter/: post.md
content/blog/oops_framework/: post.md
content/blog/overly_functional_cpp/: post.md
content/blog/parser_combinators_easy/: post.md
content/blog/pass_by_value_cpp_rust/: post.md
content/blog/pressure_free_aoc/: post.md
content/blog/pretend_linux_docker/: post.md
content/blog/prime_sieve_ruby/: post.md
content/blog/procedural_melody_generation/: post.md
content/blog/rabbit_holes/: post.md
content/blog/reason_rtc/: post.md
content/blog/robotic_vacuum/: post.md
content/blog/rust_arena_trees/: post.md
content/blog/rust_docs_github_pages/: post.md
content/blog/rust_function_pointers_ffi/: post.md
content/blog/rust_markov/: post.md
content/blog/rust_reason_a_beginners_love_story/: post.md
content/blog/rust_your_own_lisp/: post.md
content/blog/stalk_a_click/: post.md
content/blog/steam_proton_is_great/: post.md
content/blog/stencil_home/: post.md
content/blog/tail_recursion/: post.md
content/blog/towards_complexity/: post.md
content/blog/value_of_your_time/: post.md
content/blog/video_game_mechanics/: post.md
content/blog/yew_1/: post.md
content/blog/yew_2/: post.md
content/blog/yew_3/: post.md
css/: app.css
drafts/: deciduously-com.md
layouts/: Cargo.toml  document.rs  footer.css  footer.rs  layout.css  layout.rs  lib.rs
routes/blog/_/index/server/: Cargo.toml  lib.rs  page.rs
routes/blog/index/server/: Cargo.toml  page.rs
routes/index/server/: Cargo.toml  lib.rs  page.css  page.rs
src/: blog.rs  config.rs  draft.pest  handlers.rs  main.rs  router.rs  templates.rs  types.rs
src/assets/: app.css  app.js  cv.toml  highlight.pack.js  manifest.json  projects.toml  tomorrow-night.min.css
src/css/: app.css
templates/: 404.html  actix-wrap.html  blog.html  cpp-template-specialization.html  cv.html  debian-buster.html  deciduously-com.html  deciduously.html  green-squares.html  index.html  multi-stage-docker.html  pressure-free-aoc.html  procedural-melody-generation.html  projects.html  rust-arena-trees.html  skel.html  stencil-home.html
ui/: Cargo.toml  code.rs  colors.rs  global.css  lib.rs  markdown.rs  topbar.css  topbar.rs
