[package]
authors = ["Ben Lovy <ben@deciduously.com>"]
edition = "2021"
name = "deciduously_com"
version = "2.0.0"
description = "Personal landing page"
homepage = "https://deciduously.com"
repository = "https://github.com/deciduously/deciduously_com"
readme = "README.md"
keywords = ["static", "hyper", "sunfish", "pinwheel", "website"]
license = "Unlicense"

[[bin]]
name = "deciduously_com"
path = "main.rs"

[profile.release]
lto = true
strip = true

[features]
default = [
  "deciduously_com_blog_index_server",
  "deciduously_com_blog_server",
  "deciduously_com_index_server",
]

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
sunfish = "0.7"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
backtrace = "0.3"
clap = { version = "3", features = ["derive", "env"] }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
sunfish = "0.7"
deciduously_com_content = { path = "content/" }
deciduously_com_ui = { path = "ui/" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

deciduously_com_blog_index_server = { path = "routes/blog/index/server", optional = true }
deciduously_com_blog_server = { path = "routes/blog/_/index/server", optional = true }
deciduously_com_index_server = { path = "routes/index/server", optional = true }
