[workspace]
members = [
  "content",
  "layouts",
  "ui",
  "routes/blog/index/server",
  "routes/blog/_/index/server",
  "routes/index/server",
]
resolver = "2"

[workspace.package]
authors = ["Ben Lovy <ben@deciduously.com>"]
description = "Personal landing page"
edition = "2021"
homepage = "https://deciduously.com"
keywords = ["static", "hyper", "sunfish", "pinwheel", "website"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/deciduously/deciduously_com_sunfish"
rust-version = "1.76.0"
version = "2.0.4"

[workspace.lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = true
strip = true

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
backtrace = "0.3"
clap = { version = "4", features = ["derive", "env"] }
console_error_panic_hook = "0.1"
convert_case = "0.6"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1"
pinwheel = "0.2"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sunfish = "0.7"
time = { version = "0.3", features = [
  "formatting",
  "macros",
  "serde-well-known",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter-highlight = "0.22"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
url = { version = "2.2", features = ["serde"] }

deciduously_com_sunfish_content = { path = "content/" }
deciduously_com_sunfish_layouts = { path = "layouts/" }
deciduously_com_sunfish_ui = { path = "ui/" }
deciduously_com_sunfish_blog_index_server = { path = "routes/blog/index/server" }
deciduously_com_sunfish_blog_server = { path = "routes/blog/_/index/server" }
deciduously_com_sunfish_index_server = { path = "routes/index/server" }

[package]
name = "deciduously_com_sunfish"

description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "deciduously_com_sunfish"
path = "main.rs"

[features]
default = [
  "deciduously_com_sunfish_blog_index_server",
  "deciduously_com_sunfish_blog_server",
  "deciduously_com_sunfish_index_server",
]

[build-dependencies]
anyhow = { workspace = true }
sunfish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
backtrace = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
sunfish = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

deciduously_com_sunfish_content = { workspace = true }
deciduously_com_sunfish_ui = { workspace = true }
deciduously_com_sunfish_blog_index_server = { workspace = true, optional = true }
deciduously_com_sunfish_blog_server = { workspace = true, optional = true }
deciduously_com_sunfish_index_server = { workspace = true, optional = true }
