[package]
edition = "2021"
name = "deciduously_com_content"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
deciduously_com_ui = { path = "../ui" }
pinwheel = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
sunfish = "0.7"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
url = { version = "2.2", features = ["serde"] }
