[package]
name = "deciduously_com_sunfish_content"

description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
anyhow = { workspace = true }
deciduously_com_sunfish_ui = { workspace = true }
pinwheel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sunfish = { workspace = true }
time = { workspace = true }
url = { workspace = true }
