[package]
name = "deciduously_com_sunfish_layouts"

description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
deciduously_com_sunfish_ui = { workspace = true }
pinwheel = { workspace = true }
sunfish = { workspace = true }
time = { workspace = true }
