[package]
edition = "2021"
name = "deciduously_com_ui"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
console_error_panic_hook = "0.1"
convert_case = "0.5"
once_cell = "1"
pinwheel = "0.2"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tree-sitter-highlight = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = "0.20"
