[package]
name = "deciduously_com_sunfish_ui"

description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
console_error_panic_hook = { workspace = true }
convert_case = { workspace = true }
once_cell = { workspace = true }
pinwheel = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tree-sitter-highlight = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-rust = { workspace = true }
