[package]
name = "deciduously_com_sunfish_index_server"

description = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
path = "lib.rs"

[dependencies]
pinwheel = { workspace = true }
futures = { workspace = true }
sunfish = { workspace = true }
deciduously_com_sunfish_layouts = { workspace = true }
deciduously_com_sunfish_ui = { workspace = true }
