[package]
edition = "2021"
name = "deciduously_com_blog_server"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
pinwheel = "0.2"
sunfish = "0.7"
deciduously_com_ui = { path = "../../../../../ui" }
deciduously_com_content = { path = "../../../../../content" }
deciduously_com_layouts = { path = "../../../../../layouts" }
