[package]
edition = "2021"
name = "deciduously_com_sunfish_blog_server"
publish = false
version = "0.0.0"

[lib]
path = "lib.rs"

[dependencies]
pinwheel = "0.2"
sunfish = "0.7"
time = { version = "0.3", features = ["formatting", "macros"] }
deciduously_com_sunfish_ui = { path = "../../../../../ui" }
deciduously_com_sunfish_content = { path = "../../../../../content" }
deciduously_com_sunfish_layouts = { path = "../../../../../layouts" }
